tests/ui/traits/const-traits/default-method-body-is-const-body-checking.stderr
error[E0277]: the trait bound `(): [const] Tr` is not satisfied
  --> $DIR/default-method-body-is-const-body-checking.rs:10:15
   |
LL |         foo::<()>();
   |               ^^
   |
note: required by a bound in `foo`
  --> $DIR/default-method-body-is-const-body-checking.rs:6:28
   |
LL | const fn foo<T>() where T: [const] Tr {}
   |                            ^^^^^^^^^^ required by this bound in `foo`
help: make the `impl` of trait `Tr` `const`
   |
LL | impl const Tr for () {}
   |      +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
